Update Github workflow

--- a/config/application.yml
+++ b/config/application.yml
@@ -5,8 +5,8 @@ spring:
     password:
   jpa:
     show-sql: true
-    hibernate:
-      ddl-auto: create
+#    hibernate:
+#      ddl-auto: update
     properties:
       hibernate:
         default_schema: pensionmaite
