--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,14 +21,14 @@ jobs:
         with:
           java-version: 11
           distribution: 'adopt'
-
-      - name: Setup Maven
-        uses: stCarolas/setup-maven@v4.5
-        with:
-          maven-version: 3.8.2
+#
+#      - name: Set up Maven
+#        uses: actions/setup-maven@v2
+#        with:
+#          maven-version: 3.6.3
 
       - name: Build with Maven
         run: mvn clean install
 
-      - name: Test with Maven
-        run: mvn test
+#      - name: Test with Maven
+#        run: mvn test
