--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,7 @@ jobs:
 #          maven-version: 3.6.3
 
       - name: Build with Maven
-        run: mvn clean install
+        run: mvn clean install -Dactive.profile=test
 
 #      - name: Test with Maven
 #        run: mvn test
