--- a/config/application.yml
+++ b/config/application.yml
@@ -1,4 +1,6 @@
 spring:
+  application:
+    name: Pension Maite Backend
   datasource:
     url: jdbc:postgresql://localhost:5432/postgres
     username: postgres
