--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,14 +21,6 @@ jobs:
         with:
           java-version: 11
           distribution: 'adopt'
-#
-#      - name: Set up Maven
-#        uses: actions/setup-maven@v2
-#        with:
-#          maven-version: 3.6.3
 
       - name: Build with Maven
-        run: mvn clean install -Dactive.profile=test
-
-#      - name: Test with Maven
-#        run: mvn test
+        run: mvn clean install
