Config for spring security jwt

--- a/config/application.yml
+++ b/config/application.yml
@@ -19,3 +19,11 @@ server:
 logging:
   level:
     com.pensionmaite.pensionmaitebackend: DEBUG
+
+application:
+  security:
+    jwt:
+      secret-key: <SECRET_KEY>
+      expiration: 86400000 # 1 day
+      refresh-token:
+        expiration: 604800000 # 7 days
