--- a/config/application.yml
+++ b/config/application.yml
@@ -7,8 +7,8 @@ spring:
     password:
   jpa:
     show-sql: true
-#    hibernate:
-#      ddl-auto: update
+    hibernate:
+      ddl-auto: update
     properties:
       hibernate:
         default_schema: pensionmaite
@@ -23,7 +23,7 @@ logging:
 application:
   security:
     jwt:
-      secret-key: <SECRET_KEY>
+      secret-key: ${secretHashingKey}
       expiration: 86400000 # 1 day
       refresh-token:
         expiration: 604800000 # 7 days
